--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello, World!</title>
-</head>
-<body>
-	<h1>Hello, World!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>완두콩</title>
+    <style>
+      /* CSS 스타일을 추가합니다. */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+      }
+      h1 {
+        text-align: center;
+      }
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+      }
+      li {
+        display: inline-block;
+        margin: 10px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 5px 5px 0 0;
+      }
+      .name {
+        font-weight: bold;
+        margin: 10px;
+      }
+      .phone, .email {
+        margin: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>개발자 연락처</h1>
+    <ul>
+      <li>
+        <img src="assets/play_store_512.png" alt="앱 아이콘" width="300" height="300">
+        <p class="email">juyeonee826@gmail.com</p>
+      </li>
+    </ul>
+  </body>
 </html>
